--- a/CodeAcademy/Data Science SQL Projects/DSIP #3 Education Database/Queries.ipynb
+++ b/CodeAcademy/Data Science SQL Projects/DSIP #3 Education Database/Queries.ipynb
@@ -1546,6 +1546,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets just look at how the locale_code looks again"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -1628,6 +1635,404 @@
    "source": [
     "%%sql\n",
     "SELECT locale_code FROM highschool LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In case we need the locale_text and locale_size parameters later, lets make a temp table that includes them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///education.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "CREATE TEMPORARY TABLE temp_locale AS\n",
+    "    SELECT \n",
+    "        school_id,\n",
+    "        school_name,\n",
+    "        locale_code,\n",
+    "        CASE\n",
+    "            WHEN locale_code > 10 AND locale_code < 14 THEN 'City'\n",
+    "            WHEN locale_code > 20 AND locale_code < 24 THEN 'Suburb'\n",
+    "            WHEN locale_code > 30 AND locale_code < 34 THEN 'Town'\n",
+    "            WHEN locale_code > 40 AND locale_code < 44 THEN 'Rural'\n",
+    "            ELSE 'Unknown'\n",
+    "        END AS locale_text,\n",
+    "        CASE\n",
+    "            WHEN locale_code = 11 OR locale_code = 21 THEN 'Large'\n",
+    "            WHEN locale_code = 12 OR locale_code = 22 THEN 'Midsize'\n",
+    "            WHEN locale_code = 13 OR locale_code = 23 THEN 'Small'\n",
+    "            WHEN locale_code = 31 OR locale_code = 41 THEN 'Fringe'\n",
+    "            WHEN locale_code = 32 OR locale_code = 42 THEN 'Distant'\n",
+    "            WHEN locale_code = 33 OR locale_code = 43 THEN 'Remote'\n",
+    "            ELSE 'Unknown'\n",
+    "        END AS locale_size\n",
+    "    FROM highschool;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking the first few rows in the table to make sure it looks right."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///education.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>school_id</th>\n",
+       "      <th>school_name</th>\n",
+       "      <th>locale_code</th>\n",
+       "      <th>locale_text</th>\n",
+       "      <th>locale_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>251251002790</td>\n",
+       "      <td>21st Century Skills Academy</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Suburb</td>\n",
+       "      <td>Large</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>270002504190</td>\n",
+       "      <td>287 OLL ACADEMIC</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>City</td>\n",
+       "      <td>Small</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>480735000001</td>\n",
+       "      <td>A &amp; M CONS H S</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>City</td>\n",
+       "      <td>Small</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>170654000339</td>\n",
+       "      <td>A B Shepard High Sch (Campus)</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Suburb</td>\n",
+       "      <td>Large</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>480972000442</td>\n",
+       "      <td>A C JONES H S</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>Town</td>\n",
+       "      <td>Distant</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      school_id                    school_name  locale_code locale_text  \\\n",
+       "0  251251002790    21st Century Skills Academy         21.0      Suburb   \n",
+       "1  270002504190               287 OLL ACADEMIC         13.0        City   \n",
+       "2  480735000001                 A & M CONS H S         13.0        City   \n",
+       "3  170654000339  A B Shepard High Sch (Campus)         21.0      Suburb   \n",
+       "4  480972000442                  A C JONES H S         32.0        Town   \n",
+       "\n",
+       "  locale_size  \n",
+       "0       Large  \n",
+       "1       Small  \n",
+       "2       Small  \n",
+       "3       Large  \n",
+       "4     Distant  "
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT school_id, school_name, locale_code, locale_text, locale_size \n",
+    "FROM temp_locale\n",
+    "ORDER BY school_name \n",
+    "LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets now take a look at the number of schools for each different value of the locale information and what the locale text and sizes would be for each."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///education.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>locale_code</th>\n",
+       "      <th>locale_text</th>\n",
+       "      <th>locale_size</th>\n",
+       "      <th>COUNT(*)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>City</td>\n",
+       "      <td>Large</td>\n",
+       "      <td>2024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>City</td>\n",
+       "      <td>Midsize</td>\n",
+       "      <td>745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>City</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Suburb</td>\n",
+       "      <td>Large</td>\n",
+       "      <td>3554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Suburb</td>\n",
+       "      <td>Midsize</td>\n",
+       "      <td>464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Suburb</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>Town</td>\n",
+       "      <td>Fringe</td>\n",
+       "      <td>549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>Town</td>\n",
+       "      <td>Distant</td>\n",
+       "      <td>1219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Town</td>\n",
+       "      <td>Remote</td>\n",
+       "      <td>764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>Fringe</td>\n",
+       "      <td>2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>Distant</td>\n",
+       "      <td>2349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>43.0</td>\n",
+       "      <td>Rural</td>\n",
+       "      <td>Remote</td>\n",
+       "      <td>1754</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    locale_code locale_text locale_size  COUNT(*)\n",
+       "0           NaN     Unknown     Unknown         7\n",
+       "1          11.0        City       Large      2024\n",
+       "2          12.0        City     Midsize       745\n",
+       "3          13.0        City       Small       879\n",
+       "4          21.0      Suburb       Large      3554\n",
+       "5          22.0      Suburb     Midsize       464\n",
+       "6          23.0      Suburb       Small       311\n",
+       "7          31.0        Town      Fringe       549\n",
+       "8          32.0        Town     Distant      1219\n",
+       "9          33.0        Town      Remote       764\n",
+       "10         41.0       Rural      Fringe      2004\n",
+       "11         42.0       Rural     Distant      2349\n",
+       "12         43.0       Rural      Remote      1754"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT locale_code, locale_text, locale_size, COUNT(*)\n",
+    "FROM temp_locale\n",
+    "GROUP BY locale_code;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some seems to not have an actualy locale_code but we'll keep these in our dataset for now."
    ]
   }
  ],
