Q6 Work Done (Final Q)

--- a/CodeAcademy/Data Science SQL Projects/DSIP #3 Education Database/Queries.ipynb
+++ b/CodeAcademy/Data Science SQL Projects/DSIP #3 Education Database/Queries.ipynb
@@ -4049,6 +4049,263 @@
    "source": [
     "Most states have better reading scores, which makes sense because it was had higher overall scores."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. What is the average proficiency on state assessment exams for each zip code, and how do they compare to other zip codes in the same state?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///education.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>state_code</th>\n",
+       "      <th>Zip Avg Math</th>\n",
+       "      <th>State Avg Math</th>\n",
+       "      <th>Zip Average Math Compared to State Avg (%)</th>\n",
+       "      <th>Zip Avg Read</th>\n",
+       "      <th>State Avg Read</th>\n",
+       "      <th>Zip Average Read Compared to State Avg (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>602</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>23.75</td>\n",
+       "      <td>7.740366</td>\n",
+       "      <td>206.83</td>\n",
+       "      <td>60.50</td>\n",
+       "      <td>36.875162</td>\n",
+       "      <td>64.067074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>603</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>7.740366</td>\n",
+       "      <td>-67.70</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>36.875162</td>\n",
+       "      <td>-40.339246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>605</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>7.740366</td>\n",
+       "      <td>-3.11</td>\n",
+       "      <td>57.00</td>\n",
+       "      <td>36.875162</td>\n",
+       "      <td>54.575590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>606</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>2.51</td>\n",
+       "      <td>7.740366</td>\n",
+       "      <td>-67.57</td>\n",
+       "      <td>52.00</td>\n",
+       "      <td>36.875162</td>\n",
+       "      <td>41.016328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>610</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>30.75</td>\n",
+       "      <td>7.740366</td>\n",
+       "      <td>297.27</td>\n",
+       "      <td>68.50</td>\n",
+       "      <td>36.875162</td>\n",
+       "      <td>85.761893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12998</th>\n",
+       "      <td>99835</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>27.00</td>\n",
+       "      <td>24.649436</td>\n",
+       "      <td>9.54</td>\n",
+       "      <td>32.00</td>\n",
+       "      <td>33.579949</td>\n",
+       "      <td>-4.705037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12999</th>\n",
+       "      <td>99901</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>32.00</td>\n",
+       "      <td>24.649436</td>\n",
+       "      <td>29.82</td>\n",
+       "      <td>41.00</td>\n",
+       "      <td>33.579949</td>\n",
+       "      <td>22.096672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13000</th>\n",
+       "      <td>99921</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>24.49</td>\n",
+       "      <td>24.649436</td>\n",
+       "      <td>-0.65</td>\n",
+       "      <td>44.51</td>\n",
+       "      <td>33.579949</td>\n",
+       "      <td>32.549338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13001</th>\n",
+       "      <td>99926</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>24.649436</td>\n",
+       "      <td>-39.15</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>33.579949</td>\n",
+       "      <td>-55.330486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13002</th>\n",
+       "      <td>99929</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>24.50</td>\n",
+       "      <td>24.649436</td>\n",
+       "      <td>-0.61</td>\n",
+       "      <td>34.50</td>\n",
+       "      <td>33.579949</td>\n",
+       "      <td>2.739882</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>13003 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       zip_code state_code  Zip Avg Math  State Avg Math  \\\n",
+       "0           602         PR         23.75        7.740366   \n",
+       "1           603         PR          2.50        7.740366   \n",
+       "2           605         PR          7.50        7.740366   \n",
+       "3           606         PR          2.51        7.740366   \n",
+       "4           610         PR         30.75        7.740366   \n",
+       "...         ...        ...           ...             ...   \n",
+       "12998     99835         AK         27.00       24.649436   \n",
+       "12999     99901         AK         32.00       24.649436   \n",
+       "13000     99921         AK         24.49       24.649436   \n",
+       "13001     99926         AK         15.00       24.649436   \n",
+       "13002     99929         AK         24.50       24.649436   \n",
+       "\n",
+       "       Zip Average Math Compared to State Avg (%)  Zip Avg Read  \\\n",
+       "0                                          206.83         60.50   \n",
+       "1                                          -67.70         22.00   \n",
+       "2                                           -3.11         57.00   \n",
+       "3                                          -67.57         52.00   \n",
+       "4                                          297.27         68.50   \n",
+       "...                                           ...           ...   \n",
+       "12998                                        9.54         32.00   \n",
+       "12999                                       29.82         41.00   \n",
+       "13000                                       -0.65         44.51   \n",
+       "13001                                      -39.15         15.00   \n",
+       "13002                                       -0.61         34.50   \n",
+       "\n",
+       "       State Avg Read  Zip Average Read Compared to State Avg (%)  \n",
+       "0           36.875162                                   64.067074  \n",
+       "1           36.875162                                  -40.339246  \n",
+       "2           36.875162                                   54.575590  \n",
+       "3           36.875162                                   41.016328  \n",
+       "4           36.875162                                   85.761893  \n",
+       "...               ...                                         ...  \n",
+       "12998       33.579949                                   -4.705037  \n",
+       "12999       33.579949                                   22.096672  \n",
+       "13000       33.579949                                   32.549338  \n",
+       "13001       33.579949                                  -55.330486  \n",
+       "13002       33.579949                                    2.739882  \n",
+       "\n",
+       "[13003 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "WITH zip_avgs AS (\n",
+    "    SELECT zip_code, state_code, ROUND(AVG(pct_proficient_math), 2) AS 'avg_math', ROUND(AVG(pct_proficient_reading), 2) AS 'avg_read' \n",
+    "    FROM highschool\n",
+    "    WHERE pct_proficient_math IS NOT NULL \n",
+    "    GROUP BY zip_code\n",
+    "),\n",
+    "state_avg AS(\n",
+    "    SELECT state_code, AVG(pct_proficient_math) AS 'avg_math', AVG(pct_proficient_reading) AS 'avg_read'\n",
+    "    FROM highschool\n",
+    "    WHERE pct_proficient_math IS NOT NULL\n",
+    "    GROUP BY state_code\n",
+    ")\n",
+    "SELECT \n",
+    "    zip_avgs.zip_code, \n",
+    "    state_avg.state_code, \n",
+    "    zip_avgs.avg_math AS 'Zip Avg Math', \n",
+    "    state_avg.avg_math AS 'State Avg Math', \n",
+    "    ROUND(((zip_avgs.avg_math - state_avg.avg_math) / state_avg.avg_math) * 100, 2) AS 'Zip Average Math Compared to State Avg (%)',\n",
+    "    zip_avgs.avg_read AS 'Zip Avg Read', \n",
+    "    state_avg.avg_read AS 'State Avg Read',\n",
+    "    ((zip_avgs.avg_read - state_avg.avg_read) / state_avg.avg_read) * 100 AS 'Zip Average Read Compared to State Avg (%)'\n",
+    "FROM zip_avgs\n",
+    "JOIN state_avg ON zip_avgs.state_code = state_avg.state_code;"
+   ]
   }
  ],
  "metadata": {
