Fixing small typo

--- a/CodeAcademy/Data Science SQL Projects/DSIP #3 Education Database/Queries.ipynb
+++ b/CodeAcademy/Data Science SQL Projects/DSIP #3 Education Database/Queries.ipynb
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combining tables and maing SQL database\n",
+    "# Combining tables and making SQL database\n",
     "\n",
     "# Make the SQLite database\n",
     "conn = sqlite3.connect('education.db')\n",
