--- a/CodeAcademy/Data Science Foundations Skill Path/Medical Insurance Project/Medical_Insurance_Project.ipynb
+++ b/CodeAcademy/Data Science Foundations Skill Path/Medical Insurance Project/Medical_Insurance_Project.ipynb
@@ -51,7 +51,11 @@
    "outputs": [],
    "source": [
     "# create the initial variables below\n",
-    "\n"
+    "age = 28\n",
+    "sex = 0\n",
+    "bmi = 26.2\n",
+    "num_of_children = 3\n",
+    "smoker = 0"
    ]
   },
   {
@@ -80,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "91f86188",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add insurance estimate formula below\n",
-    "\n"
+    "insurance_cost = (250 * age) - (128 * sex) + (370 * bmi) + (425 * num_of_children) + (2400 * smoker) - 12500"
    ]
   },
   {
@@ -105,11 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cf6d3790",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This person's insurance cost is 5469.0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I prefer to use print f instead, to me it is cleaner\n",
+    "print(f\"This person's insurance cost is {insurance_cost} dollars.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -131,11 +146,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "eb23f0c0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "age += 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,11 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "50f6a44c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_insurance_cost = (250 * age) - (128 * sex) + (370 * bmi) + (425 * num_of_children) + (2400 * smoker) - 12500"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,11 +186,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6b72279c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "change_in_insurance_cost = new_insurance_cost - insurance_cost"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,11 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0a999d40",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The change in cost of insurance after increasing the age by 4 years is 1000.0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The change in cost of insurance after increasing the age by 4 years is {change_in_insurance_cost} dollars.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -219,11 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "53ea7df3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "age = 28\n",
+    "bmi += 3.1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,11 +276,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "19d121c8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The change in estimated insurance cost after increasing BMI by 3.1 is 1147.0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_insurance_cost = (250 * age) - (128 * sex) + (370 * bmi) + (425 * num_of_children) + (2400 * smoker) - 12500\n",
+    "change_in_insurance_cost = new_insurance_cost - insurance_cost\n",
+    "print(f\"The change in estimated insurance cost after increasing BMI by 3.1 is {change_in_insurance_cost} dollars.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,11 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ae87bfec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bmi = 26.2\n",
+    "sex = 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -290,11 +339,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "ce2da0e8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The change in estimated insurance cost for being male instead of female is -128.0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_insurance_cost = (250 * age) - (128 * sex) + (370 * bmi) + (425 * num_of_children) + (2400 * smoker) - 12500\n",
+    "change_in_insurance_cost = new_insurance_cost - insurance_cost\n",
+    "print(f\"The change in estimated insurance cost for being male instead of female is {change_in_insurance_cost} dollars.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,12 +368,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1190661d",
+   "cell_type": "markdown",
+   "id": "182d6ebe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Increasing BMI gave us a positive change in the insurance cost, so did age. This means that older people and people with a higher BMI have higher medicals costs on average compared to younger people or people with lower BMI. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,19 +398,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ee321873",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The change in estimated insurance cost for being a smoker instead of a nonsmoker is 2400.0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sex = 0\n",
+    "smoker = 1\n",
+    "new_insurance_cost = (250 * age) - (128 * sex) + (370 * bmi) + (425 * num_of_children) + (2400 * smoker) - 12500\n",
+    "change_in_insurance_cost = new_insurance_cost - insurance_cost\n",
+    "print(f\"The change in estimated insurance cost for being a smoker instead of a nonsmoker is {change_in_insurance_cost} dollars.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "681a70b7",
+   "metadata": {},
+   "source": [
+    "This means that smokers have higher medical costs on average compared to nonsmokers (as expected)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "de87f356",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The change in estimated insurance cost for having 0 children instead of 3 is -1275.0 dollars.\n"
+     ]
+    }
+   ],
+   "source": [
+    "smoker = 0\n",
+    "num_of_children = 0\n",
+    "new_insurance_cost = (250 * age) - (128 * sex) + (370 * bmi) + (425 * num_of_children) + (2400 * smoker) - 12500\n",
+    "change_in_insurance_cost = new_insurance_cost - insurance_cost\n",
+    "print(f\"The change in estimated insurance cost for having 0 children instead of 3 is {change_in_insurance_cost} dollars.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f052486e",
+   "metadata": {},
+   "source": [
+    "People with no children tend to have lower medical costs on average compared to people with children."
+   ]
   }
  ],
  "metadata": {
@@ -368,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
