Setup new project + some small visual improvements

--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Syntax_Medical_Insurance.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Syntax_Medical_Insurance.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1335fe87",
+   "metadata": {},
+   "source": [
+    "### Description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "84c02393",
    "metadata": {},
    "source": [
@@ -21,7 +29,7 @@
    "id": "05392afb",
    "metadata": {},
    "source": [
-    "## Setting up Factors"
+    "### Setting up Factors"
    ]
   },
   {
@@ -63,7 +71,7 @@
    "id": "2b7c2cbc",
    "metadata": {},
    "source": [
-    "## Working with the Formula"
+    "### Working with the Formula"
    ]
   },
   {
@@ -131,7 +139,7 @@
    "id": "203e7e61",
    "metadata": {},
    "source": [
-    "## Looking at Age Factor"
+    "### Looking at Age Factor"
    ]
   },
   {
@@ -233,7 +241,7 @@
    "id": "23bc90cf",
    "metadata": {},
    "source": [
-    "## Looking at BMI Factor"
+    "### Looking at BMI Factor"
    ]
   },
   {
@@ -299,7 +307,7 @@
    "id": "26c3c473",
    "metadata": {},
    "source": [
-    "## Looking at Male vs. Female Factor"
+    "### Looking at Male vs. Female Factor"
    ]
   },
   {
@@ -380,7 +388,7 @@
    "id": "deae95f4",
    "metadata": {},
    "source": [
-    "## Extra Practice"
+    "### Extra Practice"
    ]
   },
   {
