--- a/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Functions_Medical_Insurance.ipynb
+++ b/CodeCademy/Data Science Foundations Skill Path/Medical Insurance Projects/Python_Functions_Medical_Insurance.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "You are curious about how certain factors such as age, sex, BMI, number of children, and smoking status contribute to medical insurance costs.\n",
     "\n",
     "Note: while insurance companies do use BMI in their calculations, and that is reflected in this project, BMI is not necessarily an accurate predictor of health. As data scientists, we should always be skeptical of quantitative measures like BMI that reduce complex phenomena to a single number.\n",
@@ -22,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a Function"
+    "### Creating a Function"
    ]
   },
   {
